Make S3 website private; add S3 origins
    URL subdir/ forwards to subdir/index.html
        (no Lambda function required!)
    Add "referer" custom header as S3 website authentication
    Add referer custom_header to make S3 website private
    Merge my custom_headers with that added in #105
    In docs, warn the user to specify aliases with website_enabled

--- a/README.yaml
+++ b/README.yaml
@@ -1,8 +1,10 @@
 ---
 #
 # This is the canonical configuration for the `README.md`
-# Run `make readme` to rebuild the `README.md`
-#
+# To rebuild `README.md`:
+# 1) Make all changes to `README.yaml`
+# 2) Run `make init` (you only need to do this once)
+# 3) Run`make readme` to rebuild this file.
 
 # Name of this project
 name: terraform-aws-cloudfront-s3-cdn
@@ -75,14 +77,27 @@ usage: |-
   }
   ```
 
-  ### Generating ACM Certificate
+  ### Using an S3 Static Website Origin
 
-  Use the AWS cli to [request new ACM certifiates](http://docs.aws.amazon.com/acm/latest/userguide/gs-acm-request.html) (requires email validation)
+  When variable `website_enabled` is set to `true`, the S3 origin is configured
+  as a static website. The S3 static website has the advantage of redirecting
+  URL `subdir/` to `subdir/index.html` without requiring a
+  [Lambda@Edge function to perform the redirection](https://aws.amazon.com/blogs/compute/implementing-default-directory-indexes-in-amazon-s3-backed-amazon-cloudfront-origins-using-lambdaedge/).
+  The S3 static website responds only to CloudFront, preventing direct access to
+  S3.
+
+  In addition to setting `website_enabled=true`, you must also:
+
+  * Specify at least one `aliases`, like `["example.com"]` or
+    `["example.com", "www.example.com"]`
+  * Specify an ACM certificate
+
+  ### Generating an ACM Certificate
+
+  Use the AWS CLI to [request new ACM certifiates](http://docs.aws.amazon.com/acm/latest/userguide/gs-acm-request.html) (requires email validation)
   ```
   aws acm request-certificate --domain-name example.com --subject-alternative-names a.example.com b.example.com *.c.example.com
   ```
-
-
 
   __NOTE__:
 
@@ -116,3 +131,5 @@ contributors:
     github: "cliveza"
   - name: "David Mattia"
     github: "dmattia"
+  - name: "John McGehee"
+    github: "jmcgeheeiv"
